Leaflet-Part-1/static/css/style.css
/* Remove the default margin and padding from the body. */
body {
  padding: 0;
  margin: 0;
}
  
/* Set map, body, and html to 100% of the screen size. */
#map,
body,
html {
  height: 100%;
}

/* Set Legend Style */
.info {
  padding: 1px 10px;
  background: #ebfae2;
  border-radius: 5px;
}

.legend {
  line-height: 25px;
  color: #000000;
}

.legend i {
  width: 20px;
  height: 20px;
  float: right;
  margin-right: 10px;
  margin-left: 10px;
  opacity: 0.75;
}

h3 {
  margin: 0px;
  padding: 2px;
  font-family: Arial, Helvetica, sans-serif;
}

p {
  margin: -5px;
  padding: -6px;
  font-family: Arial, Helvetica, sans-serif;
}

